# tor-traffic-Correlation-Analysis-System

./: .gitignore  .replit  check_db_data.py  check_env.py  debug_api_call.py  package-lock.json  pyproject.toml  replit.md  requirements.txt  run.py  verify_analysis_service.py  verify_osint_service.py  verify_stats.py
attached_assets/: Pasted-Build-a-complete-run-ready-full-stack-forensic-web-appl_1765986078341.txt  Pasted-Build-a-full-stack-forensic-web-application-for-TOR-tra_1765985607489.txt
backend/: database.py  main.py
backend/models/: schemas.py
backend/routers/: __init__.py  analysis.py  nodes.py  osint.py  reports.py  sessions.py  stats.py  threat_intel.py
backend/services/: __init__.py  ai_assistant.py  correlation_engine.py  osint_engine.py  osint_scanner.py  pcap_analyzer.py  report_generator.py  tor_simulator.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Button.jsx  ConfidenceGauge.jsx  DataTable.jsx  NetworkGraph.jsx  StatCard.jsx
frontend/src/components/case/: AlertsPanel.jsx  AssistantPanel.jsx  CaseTabs.jsx  CorrelationPanel.jsx  EvidencePanel.jsx  OverviewPanel.jsx  ThreatIntelPanel.jsx
frontend/src/components/osint/: OSINTWorkspace.jsx
frontend/src/pages/: Analysis.jsx  CaseWorkspace.jsx  Dashboard.jsx  Nodes.jsx  Reports.jsx  Timeline.jsx
frontend/src/services/: api.js
