[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.0",
    "fastapi>=0.124.4",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyshark>=0.6",
    "python-multipart>=0.0.21",
    "reportlab>=4.4.6",
    "stem>=1.8.2",
    "uvicorn>=0.38.0",
]
